zeit.cms changes
================

1.39.3 (unreleased)
-------------------

Technische Änderungen
+++++++++++++++++++++

- Fehlertolerante Funktion zum XML parsen: objectify_soup_fromstring.


1.39.2 (2009-11-06)
-------------------

- Daten an das Veröffentlichungsscript werden nicht mehr per STDIN übermittelt
  sondern per Datei und Argument.


1.39.1 (2009-11-04)
-------------------

Technische Änderungen
+++++++++++++++++++++

- Ermöglicht zusätzliche Drop-Query-Argumente bei
  ``createDraggableContentObject`` anzugeben.


1.39.0 (2009-11-02)
-------------------

Technische Änderungen
+++++++++++++++++++++

- `ICMSContent` adapter flexibilisiert um per Scheme und/oder Netloc
  verschiedene Repositorys ansprechen zu können (#6385).

- UUIDs werden bereits beim erzeugen (ObjectCreatedEvent) vergeben (#6385).

- UUIDs werden bereits beim kopieren neu vergeben (nur auf dem direkt kopierten
  Objekt, #6385)

- Adaptieren eines Objekts auf ITypeDeclaration (#6385).


1.38.1 (2009-10-26)
-------------------

- Asset-Badges werden jetzt zuverlässig gespeichert (#6165).


1.38.0 (2009-10-19)
-------------------

- Site-Steuerung ist jetzt ein Dropdown (#6350).

- Die alte Suche (zeit.search) wurde entfernt.

- Extra Permission für den Repository-Navigationsbaum (#6165).

1.37.1 (2009-10-12)
-------------------

- Preview-Redirect ist jetzt trusted.


1.37.0 (2009-10-12)
-------------------

- Art und Weise geändert wie Einträge aus Channeln entfernt werden (#6200).

- Objekte erhalten jetzt direkt beim Hinzufügen eine UUID und nicht erst beim
  Einchecken (#6295).


1.36.1 (2009-10-05)
-------------------

- ObjectAddedEvent wird jetzt nur noch gesendet, wenn ein Objekt auch wirklich
  dem Repository hinzugefügt wird.


1.36 (2009-10-02)
-----------------

- Bildergruppen haben jetzt ein Thumbnail.

- Veröffentlichen hat jetzt immer ein Ergebnis; vorher konnte es vorkommen,
  dass der Prozess keine Abbruchmeldung geschrieben hat.


1.35.1 (2009-09-29)